eShopLegacyMVC-SpringBoot/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: eshop-catalog
  labels:
    app.kubernetes.io/name: eshop-catalog
    app.kubernetes.io/part-of: eshop
    app.kubernetes.io/managed-by: kubectl
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: eshop-catalog
